--- a/book/04-amplicon.Rmd
+++ b/book/04-amplicon.Rmd
@@ -423,7 +423,7 @@ otu_table(ps)[,1:3]
 refseq(ps)[1:3]
 ```
 
-We finally have our final phyloseq object containing **ASVs table**, our sample metadata, taxonomy table for our ASVs, and its DNA sequences.
+We finally have our final phyloseq object containing ASVs table, our sample metadata, taxonomy table for our ASVs, and its DNA sequences.
 
 ```{r}
 ps
