--- a/book/citation.bib
+++ b/book/citation.bib
@@ -63,3 +63,12 @@ note = {Published online at benjjneb.github.io/dada2/tutorial.html}
   doi          = {10.5281/zenodo.3731176},
   url          = {https://doi.org/10.5281/zenodo.3731176}
 }
+
+@manual{joey711,
+
+title = {phyloseq: Explore microbiome profiles using R},
+author = {Paul J. McMurdie},
+note = {Published online at http://joey711.github.io/phyloseq}
+
+}
+
