--- a/book/05-phyloseq.Rmd
+++ b/book/05-phyloseq.Rmd
@@ -1,5 +1,5 @@
 
-# Phyloseq
+# Phyloseq Object Processing
 
 ```{r include=FALSE}
 # clear-up the environment
@@ -20,11 +20,8 @@ Phyloseq accepts many forms of microbiome data, including QIIME format. But in t
 
 We are going to perform several data pre-processing:
 
-* Filtering
-  + Taxonomic Filtering
-  + Prevalence Filtering
+* Filtering: Taxonomic Filtering
 * Agglomerate Taxa
-* Abundance Value Transformation
 
 ```{r}
 # load phyloseq object `ps` if you haven't
@@ -78,10 +75,35 @@ get_taxa_unique(ps, taxonomic.rank = "Genus")
 ps_agg <- tax_glom(ps, "Genus", NArm = TRUE) 
 ```
 
-Note that the parameter `NArm = TRUE` removes unassigned sequence on Genus. But be caution of this! This choice is very dependent on your research case and can really affect the downstream or following analysis. Meanwhile, Below is our agglomerated data.
+Note that the parameter `NArm = TRUE` removes unassigned sequence on Genus. But be caution of this! This choice is very dependent on your research case and can really affect the downstream or following analysis. 
+
+Below is our original and agglomerated data and their phylogenetic tree. Note that the tree from the agglomerated data is more simpler and will be much more easier to interpret later (if we need one for phylogenetic analysis, although we will not discuss much in this tutorial). I personally think that the taxonomy rank "Genus" is decent enough to identify an originally unknown microbial species. 
 
 ```{r}
+# original data
+ps
+```
+
+```{r}
+# agglomerated data
 ps_agg
+```
+
+```{r eval=FALSE}
+ps_tree <-  plot_tree(ps, method = "treeonly",
+                   ladderize = "left",
+                   title = "Before Agglomeration")
+
+ps_agg_tree <-  plot_tree(ps_agg, method = "treeonly",
+                   ladderize = "left",
+                   title = "After Agglomeration")
+```
+
+```{r}
+ps_tree
+```
+```{r}
+ps_agg_tree
 ```
 
 We have completely perform data pre-processing. Let's use this pre-processed data into further exploratory data analysis using plots and multivariate projections method such as PCoA.
